objects/CMPL123__Configuration_Audit_Trail_Entry__c.object
<CustomObject>
    <fields>
        <fullName>CMPL123__Action__c</fullName>
        <label>Action</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Audit_Type__c</fullName>
        <label>Audit Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Config_Audit_Trail_Details__c</fullName>
        <formula>HYPERLINK('/' + Id, $Label.cmpl123__view_details)</formula>
        <label>Config Audit Trail Details</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Field_API__c</fullName>
        <label>Field API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Field_Label__c</fullName>
        <label>Field Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Namespace__c</fullName>
        <label>Namespace</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__New_Value__c</fullName>
        <label>New Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Object_API__c</fullName>
        <label>Object API</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Object_Label__c</fullName>
        <label>Object Label</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Old_Value__c</fullName>
        <label>Old Value</label>
        <length>131072</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>CMPL123__Parent_Record_Id__c</fullName>
        <label>Parent Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Parent_Record_Name__c</fullName>
        <label>Parent Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Parent_Record__c</fullName>
        <formula>IF(ISBLANK(CMPL123__Parent_Record_Id__c), CMPL123__Parent_Record_Name__c, HYPERLINK('/' + CMPL123__Parent_Record_Id__c, CMPL123__Parent_Record_Name__c + ' (' + CMPL123__Parent_Record_Id__c + ')'))</formula>
        <label>Parent Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Performed_By_Id__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Performed By Id</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Configuration_Audit_Trail_Entries</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>CMPL123__Performed_By__c</fullName>
        <formula>IF(ISBLANK(CMPL123__Performed_By_Id__c), '', HYPERLINK('/apex/CMPL123__UserDetail?id=' + CMPL123__Performed_By_Id__c, CMPL123__Performed_By_Id__r.FirstName + ' ' + CMPL123__Performed_By_Id__r.LastName + ' (' + CMPL123__Performed_By_Id__c + ')'))</formula>
        <label>Performed By</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Performed_On__c</fullName>
        <label>Performed On</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>CMPL123__Record_Id__c</fullName>
        <label>Record Id</label>
        <length>18</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Record_Name__c</fullName>
        <label>Record Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Record__c</fullName>
        <formula>IF(ISBLANK(CMPL123__Record_Id__c), CMPL123__Record_Name__c, HYPERLINK('/' + CMPL123__Record_Id__c, CMPL123__Record_Name__c + ' (' + CMPL123__Record_Id__c + ')'))</formula>
        <label>Record</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Section__c</fullName>
        <label>Section</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>CMPL123__Version__c</fullName>
        <label>Version</label>
        <precision>7</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <label>Configuration Audit Trail Entry</label>
    <listViews>
        <fullName>CMPL123__Current_Changes</fullName>
        <columns>CMPL123__Config_Audit_Trail_Details__c</columns>
        <columns>CMPL123__Audit_Type__c</columns>
        <columns>CMPL123__Section__c</columns>
        <columns>CMPL123__Object_Label__c</columns>
        <columns>CMPL123__Field_Label__c</columns>
        <columns>CMPL123__Record__c</columns>
        <columns>CMPL123__Parent_Record__c</columns>
        <columns>CMPL123__Action__c</columns>
        <columns>CMPL123__Old_Value__c</columns>
        <columns>CMPL123__New_Value__c</columns>
        <columns>CMPL123__Performed_By__c</columns>
        <columns>CMPL123__Performed_On__c</columns>
        <filterScope>Everything</filterScope>
        <label>Current Changes</label>
        <language>en_US</language>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Configuration Audit Trail</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>